--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,18 @@ dev_dependencies:
     sdk: flutter
 
   flutter_native_splash: ^1.1.8+4
+  flutter_launcher_icons: ^0.9.0
 
 flutter_native_splash:
   color: "#ffffff"
   image: assets/logo.png
   color_dark: "#ffffff"
   image_dark: assets/logo.png
+
+flutter_icons:
+    image_path: "assets/App_Icon.png"
+    android: true
+    ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
