--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^5.0.0
   uuid: ^3.0.4
   firebase_storage: ^8.0.6
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
