--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   uuid: ^3.0.4
   firebase_storage: ^8.0.6
   carousel_slider: ^3.0.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
