--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^8.0.6
   carousel_slider: ^3.0.0
   rxdart: ^0.27.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
