--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^3.0.0
   rxdart: ^0.27.1
   intl: ^0.17.0
+  firebase_auth: ^1.3.0
 
 dev_dependencies:
   flutter_test:
