--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rxdart: ^0.27.1
   intl: ^0.17.0
   firebase_auth: ^1.3.0
+  image_picker: ^0.8.0+3
 
 dev_dependencies:
   flutter_test:
